added more images, fixed display on mobile

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
     margin: 8px 0;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 .nav-bar li {
     display: inline-flex;
     justify-content: space-evenly;
@@ -15,7 +20,7 @@ body {
 }
 
 .intro {
-    height: 30rem;
+    height: 63rem;
     padding-top: 1rem;
 }
 
@@ -25,10 +30,12 @@ body {
 
 #top {
     background-color: red;
+    height: 21rem;
 }
 
 #bottom {
     background-color: green;
+    height: 21rem;
 }
 
 .intro h1 {
@@ -37,18 +44,20 @@ body {
     display: flex;
     background-color: black;
     color: darksalmon;
-    height: 8rem;
+    height: 21rem;
     margin: 0;
 }
 
 .about {
-    margin-left: 1rem;
+    margin: 3rem;
+    font-size: 20px;
 }
 
 .photos {
     display: flex;
     flex-direction: row;
     gap: 1rem;
+    justify-content: center;
 }
 
 .photos img {
@@ -58,3 +67,33 @@ body {
     overflow: hidden;
     margin: 0.5rem;
 }
+
+.testimonial {
+    background-color: teal;
+    font-size: 20px;
+    height: 20rem;
+    padding: 1rem 2rem;
+    color: rgba(255, 255, 0, 0.9);
+}
+
+@media only screen and (max-width: 55rem) {
+    .photos {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .photos img {
+        width: 80%;
+    }
+}
+
+  @media only screen and (max-width: 320px) {
+
+    .testimonial h1 {
+      font-size: 2rem;
+    }
+
+    .photos img {
+      width: 100%;
+    }
+  }
